// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component test renders as expected 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.5}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "transparent",
          "borderColor": "white",
          "borderRadius": 4,
          "borderWidth": 2,
          "height": "100%",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 14,
          }
        }
      />
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Button component test renders as expected 2`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.5}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "transparent",
          "borderColor": "white",
          "borderRadius": 4,
          "borderWidth": 2,
          "height": "100%",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 14,
          }
        }
      />
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Button component test simulate onPress 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.5}
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "transparent",
          "borderColor": "white",
          "borderRadius": 4,
          "borderWidth": 2,
          "height": "100%",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 14,
          }
        }
      />
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Button renders without crashing 1`] = `
<View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "transparent",
          "borderColor": "white",
          "borderRadius": 4,
          "borderWidth": 2,
          "height": "100%",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 14,
          }
        }
      />
    </View>
  </View>
</View>
`;
